--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: Sitoi
+          user: xinyi02
           config_timezone: Asia/Shanghai
           config_order: base.header, isocalendar, base.repositories, followup, pagespeed, people
           config_padding: 10%
