--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           filename: metrics.additional.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: Sitoi
+          user: xinyi02
           config_timezone: Asia/Shanghai
           config_order: habits, stargazers, languages, stargazers, topics
           config_padding: 10%
